<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Liste rapide des vins</string>
    <string name="action_settings">Settings</string>
    <string name="MNU_QUIT">Quitter</string>
    <string name="MNU_PAR">A propos</string>
    <string name="MNU_LANGUE">Langue</string>
    <string name="MNU_CHERCHER">Rechercher</string>
    <string name="MNU_TRIER">Trier</string>
    <string name="MNU_IMPORT">Importer des données</string>
    <string name="MNU_EXPORT">Exporter les données</string>
    <string name="MNU_RATE">Noter cette application</string>
    <string name="MNU_NOTE">Envoyer un message au développeur</string>
    <string name="NOM"><u>Nom</u></string>
    <string name="MAISON"><u>Producteur</u></string>
    <string name="PAYS"><u>Pays</u></string>
    <string name="REGION"><u>Région</u></string>
    <string name="COULEUR"><u>Cépage</u></string>
    <string name="MILLE"><u>Millésime</u></string>
  	<string name="PRIX"><u>Prix</u></string>
  	<string name="ALCOOL"><u>% alcool</u></string>
    <string name="CODE"><u>Code de produit</u></string>
  	<string name="NOTE"><u>Évaluation</u></string>
    <string name="APPREC"><u>Commentaire</u></string>
    <string name="NOLABEL">Pas de photo</string>
   
    <string name="SP">&#160;</string>
 
	<color name="LBLUE">#4b4b4a</color>
    <color name="LBLACK">#000000</color>
    
</resources>

